--- a/index.html
+++ b/index.html
@@ -33,15 +33,36 @@
 
         <div id="content-bar">
             <div id="content">
-                <div id="description">description</div>
-                <div id="side-bar">side bar</div>
+                <div id="description">
+                    <div id="image-slider">
+                        <img src="img/landing.png" alt="">
+                    </div>
+
+                    <div id="bio">
+                        AVIVA Equity Management Limited a subsidiary of 
+                        AVIVA Finance Limited is one of the leading brokerage 
+                        companies in Bangladesh offering full-fledged standard 
+                        brokerage services for the retail, institutional, NRB, 
+                        and foreign clients with a dedicated team of skilled 
+                        professionals having membership at both the Dhaka Stock 
+                        Exchange (DSE) and the Chittagong Stock Exchange (CSE).
+                    </div>
+                </div>
+                <div id="side-bar">
+                    <div id="notice">
+                        <div class="sec-title">Notice Board</div>
+                    </div>
+                    <div id="links">
+                        <div class="sec-title">Useful Links</div>
+                    </div>
+                </div>
             </div>
         </div>
 
         <div id="footer-bar">
             <footer>
                 <div id="footer-element"></div>
-                <div id="credit">&copy;AVIVA Equity Management Limited</div>
+                <div id="credit">&copy;AVIVA Equity Management Limited 2021</div>
             </footer>
         </div>
     </div>
