--- a/index.html
+++ b/index.html
@@ -35,17 +35,21 @@
             <div id="content">
                 <div id="description">
                     <div id="image-slider">
-                        <img src="img/landing.png" alt="">
+                        <div class="animate">
+                            <img class="landingImg" src="img/landing.png" style="width:100%">
+                            <img class="landingImg" src="img/stocknews.jpg" style="width:100%">
+                            <img class="landingImg" src="img/news.jpg" style="width:100%">
+                        </div>
                     </div>
 
                     <div id="bio">
-                        AVIVA Equity Management Limited a subsidiary of 
-                        AVIVA Finance Limited is one of the leading brokerage 
+                        <p><strong>AVIVA Equity Management Limited</strong> a subsidiary of 
+                        <strong>AVIVA Finance Limited</strong> is one of the leading brokerage 
                         companies in Bangladesh offering full-fledged standard 
                         brokerage services for the retail, institutional, NRB, 
                         and foreign clients with a dedicated team of skilled 
                         professionals having membership at both the Dhaka Stock 
-                        Exchange (DSE) and the Chittagong Stock Exchange (CSE).
+                        Exchange <strong>(DSE)</strong> and the Chittagong Stock Exchange <strong>(CSE)</strong>.</p>
                     </div>
                 </div>
                 <div id="side-bar">
@@ -66,6 +70,8 @@
             </footer>
         </div>
     </div>
+
+    <script src="script.js"></script>
     
 </body>
 </html>
