--- a/index.html
+++ b/index.html
@@ -63,9 +63,28 @@
             </div>
         </div>
 
+        <!-- 
+
+         -->
+
         <div id="footer-bar">
             <footer>
-                <div id="footer-element"></div>
+                <div id="footer-element">
+                    <div id="company-profile">
+                        <h2>AVIVA Equity Management Limited</h2>
+                        <p>Lorem dolor sit icing elit. Illo laudantium, quo, iste si Deserunt similique possimus accusantium, iste, pariatur repudiandae delectus</p>
+                    </div>
+                    <div id="services">
+                        <P>Services</P>
+                        <ul>
+                            <li>Serve</li>
+                            <li>Serve</li>
+                            <li>Serve</li>
+                        </ul>
+                    </div>
+                    <div id="contact">68 WW tower, Motijheel, Dhaka, Bangladesh</div>
+                </div>
+
                 <div id="credit">&copy;AVIVA Equity Management Limited 2021</div>
             </footer>
         </div>
